[WGSL] Type hierarchy Need the bug URL (OOPS!). Include a Radar link (OOPS!).
Reviewed by NOBODY (OOPS!).

* Source/WebGPU/WGSL/Type/Type.h: Added.
* Source/WebGPU/WGSL/Type/TypeArray.h: Added.
* Source/WebGPU/WGSL/Type/TypeFloat32.h: Added.
* Source/WebGPU/WGSL/Type/TypeForward.h: Added.
* Source/WebGPU/WGSL/Type/TypeNode.h: Added.
* Source/WebGPU/WGSL/Type/TypeUnsigned32.h: Added.
* Source/WebGPU/WGSL/Type/TypeVector.h: Added.
* Source/WebGPU/WebGPU.xcodeproj/project.pbxproj:
* Tools/TestWebKitAPI/Configurations/TestWGSL.xcconfig:

--- a/Tools/TestWebKitAPI/Configurations/TestWGSL.xcconfig
+++ b/Tools/TestWebKitAPI/Configurations/TestWGSL.xcconfig
@@ -23,7 +23,8 @@
 
 PRODUCT_NAME = TestWGSL;
 
-PROJECT_HEADER_SEARCH_PATHS = $(SRCROOT)/../../Source/WebGPU/WGSL $(SRCROOT)/../../Source/WebGPU/WGSL/AST $(inherited);
+WGSL_SRCROOT = $(SRCROOT)/../../Source/WebGPU/WGSL
+PROJECT_HEADER_SEARCH_PATHS = $(WGSL_SRCROOT) $(WGSL_SRCROOT)/AST $(WGSL_SRCROOT)/Type $(inherited);
 
 GCC_ENABLE_OBJC_EXCEPTIONS = YES;
 
